--- a/README.org
+++ b/README.org
@@ -1,5 +1,24 @@
 #+title Fantasy Football Draft Kit
 
+This is a kit for conducting a fantasy draft. It consists of:
+
+- Scripts to create rankings from various sources
+- Util to consolidate (join) rankings into a single, weighted average ranking
+- Util to view the top players for a ranking with optional filtering
+- Util to remove a player from a ranking with tab completion
+
+Here's the work flow:
+
+1. Create source-specific player ranking using the available scripts
+
+2. Create a consolidated, weighted average player ranking using dk-join
+
+3. Create a directory with a copy of a particular rank named players.csv
+
+4. Use dk-top and dk-rm to view and remove players respectively from
+   players.csv
+
+
 * Sites
 
 ** ESPN
